--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,11 @@
     <string name="app_name">Comfrey Project</string>
 
     <string name="detail_error_message">Oops, bad weed!</string>
-    <string name="image_content_description">menu image</string>
+    <string name="image_content_description">image</string>
 
     <string name="plants">Plants</string>
     <string name="plants_with_name">Plants - %s</string>
     <string name="plant_picture_content_description">plant picture</string>
-    <string name="profile_picture_content_description">profile picture</string>
     <string name="plant_care">Care</string>
     <string name="plant_information">Information</string>
 
