--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">Comfrey Project</string>
     <string name="app_name_small">Comfrey</string>
     <string name="app_icon_content_description">App Icon</string>
+    <string name="appwidget_text">Comfrey</string>
+    <string name="add_widget">Add widget</string>
 
     <string name="detail_error_message">Oops, something went wrong!</string>
     <string name="image_content_description">image</string>
@@ -33,7 +35,5 @@
 
 
     <string name="lorem_m" translatable="false">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nisl augue, tincidunt a interdum a, ornare ut leo. Phasellus id varius metus. Donec et rhoncus sapien. Etiam vitae sodales dolor. Cras maximus facilisis cursus."</string>
-    <string name="appwidget_text">EXAMPLE</string>
-    <string name="add_widget">Add widget</string>
 
 </resources>
